# tiro-speech-core

./: .bazelrc  .dockerignore  .gitattributes  .gitignore  BUILD.bazel  Dockerfile  README.md  WORKSPACE  repositories.bzl
examples/: README.md  config.pbtxt
examples/python/: README.md  recognize.py  requirements-dev.txt  requirements.txt
hooks/: pre-commit
k8s/: BUILD.bazel
k8s/base/: deployment.yaml  ingress.yaml  service.yaml
proto/tiro/speech/v1alpha/: BUILD.bazel  speech.proto
rest-gateway/cmd/: BUILD.bazel  main.go
rest-gateway/gateway/: BUILD.bazel  gateway.go  handlers.go  main.go
src/: aligned-word.h  base.cc  base.h  diarization.cc  diarization.h  kaldi-model.cc  kaldi-model.h  logging.cc  logging.h  options.cc  options.h  plda-scoring-utils.cc  plda-scoring-utils.h  queue-inl.h  queue.h  recognizer.cc  recognizer.h  scoped-chdir.h  server.cc  server.h  tiro.h  types.h  utils-inl.h  utils.cc  utils.h  vad.cc  vad.h
src/api/: services.cc  services.h  utils.h  validation.cc  validation.h
src/audio/: audio-source.cc  audio-source.h  audio.cc  audio.h  ffmpeg-wrapper.cc  ffmpeg-wrapper.h
src/itn/: abbreviate.grm  byte.grm  common.grm  converters.cc  converters.h  expand.grm  formatter.cc  formatter.h  lexicon.grm  maxmin-weight.h  numbers.grm  ordinals.grm  punctuation.cc  punctuation.h  timing-weight.h  wordpiece.cc  wordpiece.h
src/itn/lex/: abbr_lexicon.txt  abbr_multiple_expansions.txt  abbr_periods.txt  abbreviate_if_followed_byNumber.txt  abbreviate_if_preceded_wNumber.txt  abbreviate_words.txt  acro_denormalize.txt  alphabet.txt  ambiguous_personal_names.txt  dash.txt  degrees.txt  first_to_tenth.txt  half.txt  half05.txt  half2.txt  kjordaemi_abbr.txt  neutral_units2to9.txt  oldspeech_abbr.txt  ordinals_11-19.txt  ordinals_decades_lexicon.txt  ordinals_neutral_3-9.txt  ordinals_teens_lexicon.txt  ordinals_units_3-9.txt  ordinals_units_lexicon.txt  percent_permille.txt  simple_abbr.txt  skammstafanir_althingi.txt  units_lexicon.txt  units_notNeutral.txt
src/proto/: test.proto
src/proto/tiro/speech/v1alpha/: BUILD.bazel  speech.proto
test/: BUILD.bazel  example.flac  test-audio-source.cc  test-ffmpeg-wrapper.cc  test-formatter.cc  test-punctuation.cc  test-torchscript.cc  test-wordpiece.cc  wordpiece-vocab.txt
test/test_model/: relabel.pairs  rewrite_from_syms_lookahead.fst
test/test_model/graph/: words.txt
tools/: bazel-compdb  generate_compile_commands.sh
tools/cc/: defs.bzl
tools/models/: prepare_chain_dist.sh
tools/models/internal/: check_phones_compatible.sh  prepare_online_decoding.sh
tools/thrax/: BUILD  compile_grm_helper.sh  defs.bzl
