load("@com_github_bazelbuild_buildtools//buildifier:def.bzl", "buildifier")
load("@io_bazel_rules_docker//cc:image.bzl", "cc_image")

licenses(["notice"])  # Apache 2.0

exports_files([
    "LICENSE",
])

buildifier(
    name = "buildifier",
)

COMMON_COPTS = [
    "-std=c++17",
]

cc_library(
    name = "tiro_speech",
    srcs = glob(
        [
            "src/**/*.cc",
            "src/**/*.h",
        ],
        exclude = ["src/bin/**"],
    ),
    copts = COMMON_COPTS,
    local_defines = [
        "TIRO_SPEECH_ENABLE_HTTP_URI",
    ],
    visibility = ["//test:__pkg__"],
    deps = [
        "//proto/tiro/speech/v1alpha:speech_cc_grpc",
        "//third_party/webrtc:webrtcvad",
        "@com_github_grpc_grpc//:grpc++",
        "@com_github_grpc_grpc//:grpc++_reflection",
        "@com_google_googleapis//google/rpc:code_cc_proto",
        "@com_google_googleapis//google/rpc:error_details_cc_proto",
        "@com_google_googleapis//google/rpc:status_cc_proto",
        "@ffmpeg",
        "@fmt",
        "@kaldi",
        "@spdlog",
        "@pytorch//:torch_cpu",
        "@icu//:common",
        "@moodycamel_readerwriterqueue",
    ],
)

cc_binary(
    name = "tiro_speech_server",
    srcs = [
        "src/bin/server_main.cc",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":tiro_speech",
    ],
)

cc_image(
    name = "tiro_speech_server_image",
    base = "@ubuntu_focal_x86_64//image",
    binary = ":tiro_speech_server",
    visibility = ["//visibility:public"],
)

cc_binary(
    name = "tiro_speech_client",
    srcs = [
        "src/bin/client_main.cc",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//proto/tiro/speech/v1alpha:speech_cc_grpc",
        "@com_github_grpc_grpc//:grpc++",
        "@com_google_googleapis//google/rpc:error_details_cc_proto",
        "@com_google_googleapis//google/rpc:status_cc_proto",
    ],
)

cc_image(
    name = "tiro_speech_client_image",
    base = "@ubuntu_focal_x86_64//image",
    binary = ":tiro_speech_client",
    visibility = ["//visibility:public"],
)
