# TODO(rkjaran): Increase test coverage, specifically for the recognizer.  To do
#                that we need a publicly available model, or perhaps a small toy
#                model in the repo.
cc_library(
    name = "catch_main",
    deps = [
        "@catch2//:catch2_with_main",
    ],
)

cc_test(
    name = "audio_source",
    size = "small",
    srcs = ["test-audio-source.cc"],
    data = [
        "only_speech_16000hz.wav",
        "only_speech_32000hz.wav",
        "only_speech_8000hz.wav",
    ],
    deps = [
        ":catch_main",
        "//:tiro_speech",
    ],
)

cc_test(
    name = "ffmpeg_wrapper",
    size = "small",
    srcs = ["test-ffmpeg-wrapper.cc"],
    data = [
        "example.flac",
        "example.mp3",
        "example_44100Hz.mp3",
    ],
    deps = [
        ":catch_main",
        "//:tiro_speech",
    ],
)

cc_test(
    name = "formatter",
    srcs = ["test-formatter.cc"],
    data = glob(["test_model/**/*"]),
    deps = [
        ":catch_main",
        "//:tiro_speech",
    ],
    size = "small",
)

cc_test(
    name = "wordpiece",
    srcs = ["test-wordpiece.cc"],
    data = [
        "wordpiece-vocab.txt",
    ],
    deps = [
        ":catch_main",
        "//:tiro_speech",
    ],
    size = "small",
)


# These two tests are just to test whether torch links properly
cc_test(
    name = "torch",
    srcs = ["test-torch.cc"],
    deps = [
        "@pytorch//:torch_cpu",
    ],
    size = "small",
)

cc_test(
    name = "torchscript",
    srcs = ["test-torchscript.cc"],
    data = [
        "@clarin_electra_punctuation_model_traced//file:traced_electra.pt",
    ],
    args = [
        "clarin_electra_punctuation_model_traced/file/traced_electra.pt",
    ],
    deps = [
        "@pytorch//:torch_cpu",
    ],
    size = "small",
)

cc_test(
    name = "punctuation",
    srcs = ["test-punctuation.cc"],
    data = [
        "@clarin_electra_punctuation_model_traced//file:traced_electra.pt",
        "@clarin_electra_punctuation_vocab//file:vocab.txt",
    ],
    deps = [
        ":catch_main",
        "//:tiro_speech",
    ],
    size = "small",
)
