# Based on example: https://github.com/grpc-ecosystem/grpc-gateway/tree/b4d54a0e3d1ea061661de197ce13e09e27ba8c41/examples/internal/gateway
load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "doc.go",
        "gateway.go",
        "handlers.go",
        "main.go",
    ],
    importpath = "gitlab.com/tiro-is/tiro-speech-core/rest-gateway/gateway",
    visibility = ["//visibility:public"],
    deps = [
        "//proto/tiro/speech/v1alpha:go_default_library",
        "@com_github_golang_glog//:go_default_library",
        "@go_googleapis//google/rpc:errdetails_go_proto",
        "@grpc_ecosystem_grpc_gateway//runtime:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//connectivity:go_default_library",
    ],
)
