package(
    default_visibility = ["//visibility:public"],
)

load(
    "@com_google_googleapis_imports//:imports.bzl",
    "cc_grpc_library",
    "cc_proto_library",
)
load("@rules_proto//proto:defs.bzl", "proto_library")

proto_library(
    name = "speech_proto",
    srcs = [
        "speech.proto",
    ],
    deps = [
        "@com_google_googleapis//google/api:annotations_proto",
        "@com_google_googleapis//google/api:client_proto",
        "@com_google_googleapis//google/api:field_behavior_proto",
        "@com_google_googleapis//google/api:resource_proto",
        "@com_google_googleapis//google/rpc:status_proto",
        "@com_google_protobuf//:any_proto",
        "@com_google_protobuf//:duration_proto",
        "@com_google_protobuf//:timestamp_proto",
    ],
)

cc_proto_library(
    name = "speech_cc_proto",
    deps = [":speech_proto"],
)

cc_grpc_library(
    name = "speech_cc_grpc",
    srcs = [":speech_proto"],
    grpc_only = True,
    deps = [":speech_cc_proto"],
)
